# beat-the-maths

./: .gitignore  .gitmessage  Beat the Maths.spec  LICENSE  README.md  pyproject.toml
beat_the_maths/: __main__.py
beat_the_maths/core/: cli.py
beat_the_maths/core/io/inputs/: exercise_response.py  parameters.py
beat_the_maths/core/io/outputs/: game.py  title.py
beat_the_maths/core/services/quiz_engine/: problem_generator.py
beat_the_maths/core/styles/: tokens.py
beat_the_maths/core/utils/: format_text.py
beat_the_maths/data/texts/: __init__.py  parameters.py  title.py
